--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Lawyered</string>
+    <string name="menu_law">Law</string>
+    <string name="menu_alerts">Alerts</string>
+    <string name="menu_profiles">Third Parties</string>
 </resources>
